--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <array name="preloaded_fonts" translatable="false">
+        <item>@font/aclonica</item>
+        <item>@font/acme</item>
+        <item>@font/alatsi</item>
+        <item>@font/alfa_slab_one</item>
+        <item>@font/almendra_bold</item>
         <item>@font/antic</item>
         <item>@font/bangers</item>
         <item>@font/roboto</item>
