--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -5,8 +5,11 @@
         <item>@font/acme</item>
         <item>@font/alatsi</item>
         <item>@font/alfa_slab_one</item>
+        <item>@font/almendra</item>
         <item>@font/almendra_bold</item>
+        <item>@font/amaranth</item>
         <item>@font/antic</item>
+        <item>@font/arbutus_slab</item>
         <item>@font/bangers</item>
         <item>@font/roboto</item>
         <item>@font/roboto_medium</item>
