--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:fontFamily="@font/almendra_bold"
-            android:text="Грячее"
+            android:text="Горячее"
             android:textSize="28sp" />
 
     </RelativeLayout>
