--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -222,6 +222,7 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:layout_width="match_parent"
                         android:layout_marginTop="5dp"
+                        android:id="@+id/allrecept"
                         android:layout_height="200dp"/>
                 </LinearLayout>
 
