--- a/app/src/main/res/layout/receptview.xml
+++ b/app/src/main/res/layout/receptview.xml
@@ -1,12 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
-android:layout_height="wrap_content">
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="4dp">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/recepttext"
-        android:text="папа"/>
+        android:orientation="horizontal"
+        android:background="#d4cbe5"
+        android:padding="16dp">
 
-</LinearLayout>
+        <!-- Изображение рецепта -->
+        <ImageView
+            android:id="@+id/imgrecept"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:elevation="16dp"
+            android:layout_gravity="center"
+            android:scaleType="centerCrop"
+            android:src="@drawable/googleg_standard_color_18"
+            android:background="@drawable/circular_background"/>
+
+        <!-- Текст рецепта -->
+        <TextView
+            android:id="@+id/recepttext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Название рецепта"
+            android:textSize="24sp"
+            android:layout_gravity="center"
+            android:textColor="#272727"
+            android:layout_marginStart="16dp"/>
+
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
