--- a/app/src/main/res/layout/activity_all_recept.xml
+++ b/app/src/main/res/layout/activity_all_recept.xml
@@ -40,6 +40,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/allrecepts"
         android:layout_marginTop="5dp">
 
     </androidx.recyclerview.widget.RecyclerView>
