--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -189,15 +189,16 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
                 android:orientation="vertical">
 
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="260dp"
+                    android:layout_height="400dp"
                     android:orientation="vertical"
-                    android:layout_marginTop="30dp"
-                    android:padding="20dp">
+                    android:padding="20dp"
+                    android:layout_marginTop="30dp">
 
                     <RelativeLayout
                         android:layout_width="match_parent"
@@ -220,19 +221,20 @@
                     </RelativeLayout>
 
                     <androidx.recyclerview.widget.RecyclerView
-                        android:layout_width="match_parent"
-                        android:layout_marginTop="5dp"
                         android:id="@+id/allrecept"
-                        android:layout_height="200dp"/>
+                        android:layout_width="match_parent"
+                        android:layout_height="330dp"
+                        android:layout_marginTop="5dp"
+                        android:background="#80F1F1F1" />
                 </LinearLayout>
 
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="260dp"
+                    android:layout_height="400dp"
                     android:orientation="vertical"
-                    android:layout_marginTop="30dp"
-                    android:padding="20dp">
+                    android:padding="20dp"
+                    android:layout_marginTop="30dp">
 
                     <RelativeLayout
                         android:layout_width="match_parent"
@@ -257,8 +259,9 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:layout_width="match_parent"
                         android:layout_marginTop="5dp"
+                        android:layout_height="330dp"
                         android:id="@+id/loverecept"
-                        android:layout_height="200dp"/>
+                        android:background="#80F1F1F1" />
                 </LinearLayout>
 
             </LinearLayout>
