--- a/app/src/main/res/layout/activity_recept_detail.xml
+++ b/app/src/main/res/layout/activity_recept_detail.xml
@@ -1,50 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent">
 
 
 
-
-    <ImageView
-        android:id="@+id/detail_imgrecept"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_alignParentTop="true"
-        android:scaleType="centerCrop" />
+        android:orientation="vertical"
+        android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#dde0eb"
+                android:orientation="horizontal"
+                android:id="@+id/layout1"
+                android:padding="20dp">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:id="@+id/back"
+                    android:layout_centerVertical="true"
+                    android:src="@drawable/back_ico" />
+
+                <TextView
+                    android:id="@+id/detail_recepttext"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:fontFamily="@font/almendra_bold"
+                    android:text="Рецепты"
+                    android:textSize="26sp" />
 
 
-    <TextView
-        android:id="@+id/detail_recepttext"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/detail_imgrecept"
-        android:layout_margin="16dp"
-        android:text="Название рецепта"
-        android:textSize="24sp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/detail_imgrecept"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_below="@+id/layout1"
+                    android:layout_marginTop="0dp"
+                    android:scaleType="centerCrop" />
 
 
-    <TextView
-        android:id="@+id/detail_recept_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/detail_recepttext"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:text="Текст рецепта"
-        android:textSize="18sp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/backbtn"
-        android:textColor="#605687"
-        android:layout_below="@+id/detail_recept_text"
-        android:layout_marginTop="363dp"
-        android:onClick="backClick"
-        android:backgroundTint="#b8d7f5"
-        android:text="Назад" />
-</RelativeLayout>
+                <TextView
+                    android:id="@+id/detail_recept_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/detail_imgrecept"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:text="Текст рецепта"
+                    android:textSize="18sp" />
+            </LinearLayout>
+    </LinearLayout>
+</ScrollView>
