--- a/app/src/main/res/layout/activity_categories.xml
+++ b/app/src/main/res/layout/activity_categories.xml
@@ -11,6 +11,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#dde0eb"
         android:padding="20dp">
 
         <ImageView
@@ -20,15 +21,8 @@
             android:layout_centerVertical="true"
             android:src="@drawable/back_ico" />
 
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
         <TextView
-            android:id="@+id/Name_Categor"
+            android:id="@+id/nameCategories"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -36,10 +30,12 @@
             android:text="Горячее"
             android:textSize="28sp" />
 
+
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
+        android:id="@+id/receptforcategor"
         android:layout_height="match_parent"
         android:layout_marginTop="5dp">
 
