--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -45,7 +45,7 @@
             android:fontFamily="@font/roboto"
             android:gravity="center"
             android:padding="10dp"
-            android:text="@string/start_text"
+            android:text="@string/info_text"
             android:textSize="22sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +59,7 @@
             android:fontFamily="@font/roboto"
             android:gravity="center"
             android:padding="10dp"
-            android:text="@string/start_text2"
+            android:text="@string/info_text2"
             android:textSize="22sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
