--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -25,7 +25,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/bangers"
-        android:text="Delishes"
+        android:text="Dishes"
         android:textColor="@color/white"
         android:textAlignment="center"
         android:textSize="70sp"
